--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 </section>
  <footer>
   <h2>"Data analyst passionné avec plus de 7 ans d'expérience, je suis spécialisé dans l'exploitation et l'analyse de larges volumes de données. ".</h2>
-  <section class="themes_footer">
-    <!-- <div class="themes ANALYSE-->
-       </div>
-      </article>
-  <!-- <div class="themes-->
+  <section>
+    <ul id="themefin">
+    
+    </ul>
+ 
   </section>
   <p>&copy; Data analyst 2024 .</p>
 </footer>
