--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- section NAV  -->
     <nav>
       <div>
+        <img class="avatar" src="images\logo data analyst.png" alt="">
         <h1 id="titreId"></h1>
          
         
